# rcdpr

./: .gitignore  CMakeLists.txt  README.md  package.xml
bash/: rcdpr.sh  readme.md  reset_params.sh
launch/: rcdpr-apm.launch  rcdpr_env.launch
scripts/: GAClass.py  Jacobi.py  Jacobian.py  PIDClass.py  README.md  calculate_force.py  calculate_r.py  cmd_force.py  compare_time.py  compare_trajectory.py  compare_value_func.py  control_car.py  control_drone.py  distance_between_lines.py  gazebo_reset.py  gradient_calculation.py  jacobi_linearprog.py  offline_phase.py  offline_phase_force_only.py  online_phase_network.py  online_phase_optimizer.py  opt_scipy_value.py  optimizer.py  optimizer_cost.py  optimizer_cvxpy.py  pidController.py  plot.py  rotate_calculation.py  torch_fit_v6.py  torch_fit_v6_backup.py  torch_fit_v8.py  torch_fit_v9.py  torch_fitting.py  value_function.py  value_opti.py
scripts/data/: r.mat  random_train_data_0.mat  random_train_data_10.mat  random_train_data_11.mat  random_train_data_12.mat  random_train_data_13.mat  random_train_data_15.mat  random_train_data_17.mat  random_train_data_18.mat  random_train_data_2.mat  random_train_data_4.mat  random_train_data_5.mat  random_train_data_6.mat  random_train_data_8.mat  train_data.mat  value_data.mat  value_func_cfg.mat
scripts/logs/: events.out.tfevents.1628392683.Fire-MECHREVO  events.out.tfevents.1634299108.Fire-MECHREVO
scripts/model/: 0.pt  torch_fit_value2-12-13.pt  torch_fit_value2.pt  (+3 more)
worlds/: rcdpr.world  read.md
worlds/plugins/: CMakeLists.txt  rcdpr_plugin.cc  rcdpr_plugin_fp.cc
(+288 files in other folders)
